# Carla

./: .gitignore  .gitmodules  .travis.yml  INSTALL.md  Makefile  Makefile.dist.mk  Makefile.print.mk  README.md  ReleaseNotes  appdata.xml  meson.build  paramspinbox.py  pixmapdial.py
.github/: FUNDING.yml
.github/workflows/: build.yml  cmake.yml  dpf.yml  irc.yml  macos-latest.yml  pylint.yml  release.yml  ubuntu-latest.yml  wine.yml  wine.yml.disabled
.travis/: before_install.sh  install.sh  linux..before_install.sh  linux..install.sh  linux..script.sh  linux.win32.install.sh  linux.win32.script.sh  linux.win64.install.sh  linux.win64.script.sh  script-linux-juce-strict.sh  script-linux-strict.sh  script-linux.sh  script-macos.sh  script-pylint.sh  script-win32.sh  script-win64.sh
cmake/: .cmake-format.json  .gitignore  CMakeLists.txt  Info-framework.plist.in  README.md  carla-host-plugin.pc.in  carla-native-plugin.pc.in  carla-standalone.pc.in  carla-utils.pc.in
data/: appdata.xml  appdata.xml.in  build-haiku.sh  carla  carla-bridge-lv2-modgui  carla-control  carla-control.desktop  carla-database  carla-host-plugin.pc  carla-jack-multi  carla-jack-patchbayplugin  carla-jack-single  carla-libdir  carla-native-plugin.pc  carla-osc-gui  carla-patchbay  carla-rack  carla-settings  carla-single  carla-standalone  carla-standalone.pc  carla-utils.pc  carla.desktop  carla.xml  cleanup-modules.sh  copy-dpf-stuff  copy-juce  copy-juce-carla  copy-zynaddsubfx  generate-zynaddsubfx-presets.sh  png2rgba.py  stoat-supression.txt  stoat-whitelist.txt  update-dpf  update-juce  valgrind.sh  valgrind.supp
data/desktop/: carla-jack-multi.desktop  carla-jack-single.desktop  carla-patchbay.desktop  carla-rack.desktop  carla.desktop
data/docker/: .dockerignore  Dockerfile  build.sh
data/linux/: README  app-carla-control.py  app-carla.py  app-plugin.py  build-all.sh  build-chroot.sh  build-deps.sh  build-pyqt.sh  build.sh  build64.sh  common.env  make-binary.sh
data/lv2/: carla.ttl  manifest.ttl
data/macos/: Carla-Control.plist  Carla-Control_Info.plist  Carla.plist  CarlaVstFxShell.plist  CarlaVstShell.plist  Carla_Info.plist  README  build-deps-new.sh  build-deps.sh  build.sh  bundle.py  common.env  env-vars.sh  env.sh  generate-vst-bundles.sh  mac-build-test.sh  package.xml
data/patches/: glib_skip-gettext.patch  pyliblo-python3.7.patch  qt55-newosx-fix.patch  qt56-cpp98-compat.patch  qt59-osx10.8-compat3.patch
data/pkgconfig/: carla-host-plugin.pc  carla-native-plugin.pc  carla-standalone.pc  carla-utils.pc
data/presentation/: sonoj2017.odg
data/stoat/: blacklist.txt  run-stoat.sh  whitelist.txt
data/tmp/: patch1  patch2
data/todo/: carla-control  carla-control.desktop
data/windows/: Dockerfile  README  README.txt  app-console.py  app-control.py  app-gui.py  app-plugin-ui.py  app.py  build-deps.sh  build-pyqt.sh  build-win-all.sh  build-win.sh  build-win32.sh  build-win64.sh  common.env  create-wineprefixes.sh  pack-win.sh  plugin-ui.py
doc/: Carla-TODO  Carla-TestCases
react/: App.tsx  package-lock.json  package.json  vite.config.ts
react/src/: App.tsx  index.css  main.tsx  osc-worker.ts
resources/: resources-theme.qrc  resources.qrc
resources/16x16/: add-from-favorites.svgz  add-jack-alt.svgz  add-jack.svgz  application-exit.svgz  arrow-right.svgz  audio-volume-medium.svgz  audio-volume-muted-orig.svgz  audio-volume-muted.svgz  balance-alt.svgz  balance-alt2.svgz  balance.svgz  bookmarks.svgz  compact-alt.svgz  compact.svgz  configure.svgz  (+35 more)
source/: Makefile.deps  Makefile.deps.mk  Makefile.mk  carla  carla-control  carla-jack-multi  carla-jack-single  carla-mini  carla-patchbay  carla-plugin  carla-rack  carla.kdev4  carla.py  carla_app.py  carla_backend.pro  carla_backend.py  carla_backend_qt.py  carla_backend_qtweb.py  carla_control.py  carla_database.py  carla_host.py  carla_main.py  carla_modgui.py  carla_panels.py  carla_patchbay.py  carla_rack.py  carla_settings.py  carla_shared.py  carla_skin.py  carla_style.py  carla_utils.py  carla_widgets.py  externalui.py  ladspa_rdf.py  patchcanvas.py  patchcanvas_theme.py
source/modules/rtmidi/: Makefile  RtMidi.cpp  RtMidi.h  configure  configure.ac
source/modules/rtmidi/doc/: release.txt
source/modules/rtmidi/doc/doxygen/: Doxyfile  footer.html  tutorial.txt
source/modules/rtmidi/doc/html/: RtError_8h-source.html  RtError_8h_source.html  annotated.html  classMidiInAlsa-members.html  classMidiInAlsa.html  classMidiInCore.html  classMidiInDummy-members.html  classMidiInJack.html  classMidiOutAlsa.html  classMidiOutApi-members.html  classMidiOutApi.html  classMidiOutDummy.html  classMidiOutJack-members.html  classMidiOutWinKS.html  classRtMidi-members.html  classRtMidiIn-members.html  classRtMidiIn.html  classRtMidiOut-members.html  classRtMidiOut.html  files.html  functions_enum.html  functions_eval.html  structMidiInApi_1_1MidiMessage-members.html  structMidiInApi_1_1MidiMessage.html  structMidiInApi_1_1MidiQueue-members.html  structRtMidiIn_1_1MidiMessage-members.html  structRtMidiIn_1_1MidiQueue.html  structRtMidiIn_1_1RtMidiInData.html
source/modules/rtmidi/include/: ks.h
source/modules/rtmidi/msw/: rtmidilib.vcproj
source/modules/rtmidi/tests/: Makefile.in  cmidiin.dsp  qmidiin.cpp  qmidiin.dsp  sysextest.cpp  sysextest.dsp
source/native-plugins/zynaddsubfx/UI/: ADnoteUI.fl  BankUI.fl  BankView.cpp  BankView.h  CMakeLists.txt  ConfigUI.fl  Connection.cpp  Connection.h  ConnectionDummy.cpp  EffUI.fl  EnvelopeFreeEdit.cpp  EnvelopeFreeEdit.h  EnvelopeUI.fl  FilterUI.fl  Fl_EQGraph.H  Fl_EQGraph.cpp  Fl_Osc_Button.H  Fl_Osc_Button.cpp  Fl_Osc_Check.H  Fl_Osc_Choice.H  Fl_Osc_Choice.cpp  Fl_Osc_Counter.H  Fl_Osc_Counter.cpp  Fl_Osc_Dial.H  Fl_Osc_Dial.cpp  Fl_Osc_DialF.H  Fl_Osc_DialF.cpp  Fl_Osc_Interface.h  Fl_Osc_ListView.H  Fl_Osc_ListView.cpp  Fl_Osc_Numeric_Input.H  Fl_Osc_Numeric_Input.cpp  Fl_Osc_Output.H  Fl_Osc_Output.cpp  Fl_Osc_Pane.H  Fl_Osc_Pane.cpp  Fl_Osc_Roller.cpp  Fl_Osc_Slider.H  Fl_Osc_Slider.cpp  Fl_Osc_TSlider.H  (+42 more)
source/native-plugins/zynaddsubfx/UI/NSM/: Client.H
(+3450 files in other folders)
